@@ -1,35 +1,0 @@
-// Copyright (c) 1999  Utrecht University (The Netherlands),
-// ETH Zurich (Switzerland), Freie Universitaet Berlin (Germany),
-// INRIA Sophia-Antipolis (France), Martin-Luther-University Halle-Wittenberg
-// (Germany), Max-Planck-Institute Saarbruecken (Germany), RISC Linz (Austria),
-// and Tel-Aviv University (Israel).  All rights reserved.
-//
-// This file is part of CGAL (www.cgal.org); you can redistribute it and/or
-// modify it under the terms of the GNU Lesser General Public License as
-// published by the Free Software Foundation; version 2.1 of the License.
-// See the file LICENSE.LGPL distributed with CGAL.
-//
-// Licensees holding a valid commercial license may use this file in
-// accordance with the commercial license agreement provided with the software.
-//
-// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
-// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
-//
-// $Source$
-// $Revision$ $Date$
-// $Name$
-//
-// Author(s)     : Geert-Jan Giezeman
- 
-
-#ifndef CGAL_UTILS_H
-#define CGAL_UTILS_H
-
-#ifndef CGAL_ASSERTIONS_H
-#include <CGAL/assertions.h>
-#endif // CGAL_ASSERTIONS_H
-#ifndef CGAL_KERNEL_ASSERTIONS_H
-#include <CGAL/kernel_assertions.h>
-#endif // CGAL_KERNEL_ASSERTIONS_H
-
-#endif
